--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "node-sass": "^4.14.0",
     "prettier": "^1.19.1",
     "sass-loader": "^8.0.2",
+    "vue-loader": "^15.9.1",
     "vue-template-compiler": "^2.6.11",
     "webpack": "^4.43.0"
   }
